added the pickup location and pickup time

--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
   </head>
   <body>
     <noscript> You need to enable JavaScript to run this app. </noscript>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDKPt9VC9B2xshNU1z56LpqN4VzuLCT7GU&libraries=places"></script>
     <div id="root"></div>
     <!--
       This HTML file is a template.
